--- a/utils/pixivindexlimitsdialog.ui
+++ b/utils/pixivindexlimitsdialog.ui
@@ -152,17 +152,23 @@
       <item row="7" column="1">
        <widget class="QComboBox" name="comboLanguage"/>
       </item>
-      <item row="8" column="1">
-       <widget class="QCheckBox" name="checkOriginalOnly">
+      <item row="8" column="0">
+       <widget class="QLabel" name="label_7">
         <property name="text">
-         <string>Only original works</string>
+         <string>Fetch covers</string>
+        </property>
+        <property name="buddy">
+         <cstring>comboFetchCovers</cstring>
         </property>
        </widget>
       </item>
+      <item row="8" column="1">
+       <widget class="QComboBox" name="comboFetchCovers"/>
+      </item>
       <item row="9" column="1">
-       <widget class="QCheckBox" name="checkFetchCovers">
+       <widget class="QCheckBox" name="checkOriginalOnly">
         <property name="text">
-         <string>Fetch cover images</string>
+         <string>Only original works</string>
         </property>
        </widget>
       </item>
@@ -189,6 +195,7 @@
   <tabstop>dateTo</tabstop>
   <tabstop>comboLength</tabstop>
   <tabstop>comboLanguage</tabstop>
+  <tabstop>comboFetchCovers</tabstop>
   <tabstop>checkOriginalOnly</tabstop>
  </tabstops>
  <resources/>
