--- a/utils/pixivindexlimitsdialog.ui
+++ b/utils/pixivindexlimitsdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>408</width>
-    <height>464</height>
+    <width>386</width>
+    <height>492</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -176,7 +176,14 @@
       <item row="6" column="1">
        <widget class="QComboBox" name="comboLanguage"/>
       </item>
-      <item row="7" column="0" colspan="2">
+      <item row="7" column="1">
+       <widget class="QCheckBox" name="checkHideAIWork">
+        <property name="text">
+         <string>Hide AI work</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0" colspan="2">
        <widget class="QStackedWidget" name="exModeStack">
         <property name="currentIndex">
          <number>1</number>
@@ -195,7 +202,26 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
+          <item row="1" column="1">
+           <widget class="QComboBox" name="comboLengthMode">
+            <item>
+             <property name="text">
+              <string>Characters</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Words</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Reading time</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="2" column="0">
            <widget class="QLabel" name="label_3">
             <property name="text">
              <string>Text length</string>
@@ -205,7 +231,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="2" column="1">
            <widget class="QComboBox" name="comboLength">
             <item>
              <property name="text">
@@ -214,27 +240,27 @@
             </item>
             <item>
              <property name="text">
-              <string>Flash (less than 5000)</string>
+              <string>Flash (&lt; 5000 words, chars; &lt; 9 min)</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Short (5000 - 20000)</string>
+              <string>Short (5000 - 20000 words, chars; 10 - 59 min)</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Medium (20000 - 80000)</string>
+              <string>Medium (20000 - 80000 words, chars; 60 - 179 min)</string>
              </property>
             </item>
             <item>
              <property name="text">
-              <string>Long (80000+)</string>
+              <string>Long (80000+ words, chars; 180+ min)</string>
              </property>
             </item>
            </widget>
           </item>
-          <item row="2" column="0">
+          <item row="3" column="0">
            <widget class="QLabel" name="label_7">
             <property name="text">
              <string>Fetch covers</string>
@@ -244,7 +270,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item row="3" column="1">
            <widget class="QComboBox" name="comboFetchCovers">
             <item>
              <property name="text">
@@ -263,14 +289,14 @@
             </item>
            </widget>
           </item>
-          <item row="3" column="1">
+          <item row="4" column="1">
            <widget class="QCheckBox" name="checkOriginalOnly">
             <property name="text">
              <string>Only original works</string>
             </property>
            </widget>
           </item>
-          <item row="4" column="1">
+          <item row="5" column="1">
            <spacer name="verticalSpacer">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -282,6 +308,13 @@
              </size>
             </property>
            </spacer>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_14">
+            <property name="text">
+             <string>Text length mode</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -972,6 +1005,8 @@
   <tabstop>checkDateTo</tabstop>
   <tabstop>dateTo</tabstop>
   <tabstop>comboLanguage</tabstop>
+  <tabstop>checkHideAIWork</tabstop>
+  <tabstop>comboLengthMode</tabstop>
   <tabstop>comboLength</tabstop>
   <tabstop>comboFetchCovers</tabstop>
   <tabstop>checkOriginalOnly</tabstop>
@@ -989,12 +1024,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>86</x>
-     <y>85</y>
+     <x>107</x>
+     <y>182</y>
     </hint>
     <hint type="destinationlabel">
-     <x>169</x>
-     <y>82</y>
+     <x>312</x>
+     <y>185</y>
     </hint>
    </hints>
   </connection>
@@ -1005,12 +1040,12 @@
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>74</x>
-     <y>118</y>
+     <x>94</x>
+     <y>213</y>
     </hint>
     <hint type="destinationlabel">
-     <x>163</x>
-     <y>116</y>
+     <x>306</x>
+     <y>216</y>
     </hint>
    </hints>
   </connection>
@@ -1021,8 +1056,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>310</x>
-     <y>158</y>
+     <x>319</x>
+     <y>556</y>
     </hint>
     <hint type="destinationlabel">
      <x>368</x>
@@ -1037,8 +1072,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>219</x>
-     <y>160</y>
+     <x>228</x>
+     <y>556</y>
     </hint>
     <hint type="destinationlabel">
      <x>280</x>
